Grouped bar chart added

--- a/ru.futurelink.rap.d3/build.properties
+++ b/ru.futurelink.rap.d3/build.properties
@@ -1,5 +1,9 @@
-source.. = src/
+source.. = src/,\
+           resources/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                resources/
+src.includes = resources/,\
+               src/,\
+               META-INF/
