Modified data structure, unified for all chart types. Added legend labels for all multirow charts.

--- a/ru.futurelink.rap.d3/build.properties
+++ b/ru.futurelink.rap.d3/build.properties
@@ -1,9 +1,7 @@
-source.. = src/,\
-           resources/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                resources/
-src.includes = resources/,\
-               src/,\
-               META-INF/
+src.includes = resources/
+jars.compile.order = .
+source.. = src/
