--- a/ru.futurelink.rap.d3/pom.xml
+++ b/ru.futurelink.rap.d3/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ru.futurelink.rap.d3</groupId>
   <artifactId>ru.futurelink.rap.d3</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
